@startuml

title __API_HANDLERS's Class Diagram__\n

  package  {
    package backgroundServices.API_Handlers {
      class APIRequest {
          - apiProperties : Properties
          - responseResult : JSONObject[]
          + APIRequest()
          + makeRequest()
          + getApiResponseResults()
          + getApiResponseKeys()
      }
    }
  }
  

  package  {
    package backgroundServices.API_Handlers {
      class AdapterMain {
          {static} + main()
      }
    }
  }
  

  package  {
    package backgroundServices.API_Handlers {
      interface Request {
          {abstract} + makeRequest()
          {abstract} + getApiResponseResults()
          {abstract} + getApiResponseKeys()
      }
    }
  }
  

  APIRequest o-- Reader : myReader
  APIRequest o-- Request : request


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
